--- a/css/styles.css
+++ b/css/styles.css
@@ -616,7 +616,7 @@ img {
   text-transform: capitalize;
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.11111;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
@@ -767,6 +767,8 @@ img {
 }
 
 .portfolio-item {
+  width: 100%;
+  height: 100%;
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
@@ -1030,7 +1032,7 @@ img {
     flex-wrap: wrap;
     align-items: baseline;
     justify-content: flex-start;
-    margin-left: 108px;
+    padding-left: 108px;
 
     padding: 0;
     row-gap: 72px;
